--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,7 +34,7 @@ jobs:
           sudo apt-get install -y ruby ruby-dev build-essential libssl-dev
           sudo gem install --no-document fpm
 
-      - name: Create tarball of binaries
+      - name: Create tarball of CLI binary
         run: tar -czvf dist/rezn-jcs_amd64.tar.gz -C dist reznjcs-cli
 
       - name: Upload release artifacts
